# up4w-core

./: README.md  oxd_net.cpp  oxd_net.h
apps/: CMakeLists.txt  core.cpp  framework.cmake  runner.cpp  sp_linux_x64.cmake  sp_macos_x64.cmake  sp_windows_x64.cmake
docs/: index.md  markdown.css  uep_0000.md  uep_0001.md  uep_0002.md  uep_0003.md  uep_0004.md  uep_0005.md  uep_0006.md  uep_0007.md  uep_0008.md  uep_0009.md  uep_0010.md  uep_0011.md  uep_0012.md  uep_0013.md  uep_0014.md  uep_0015.md  uep_0016.md  uep_0017.md  uep_0018.md  uep_0019.md  uep_0020.md  uep_0021.md  uep_0022.md  uep_0023.md  uep_0099.md
externs/libsodium/: libs_inline_c.h  libs_inline_c_0.cpp
externs/libsodium/libsodium/: .gitignore
externs/miniposix/: essentials.h
externs/miniposix/core/ext/: ext.h
externs/miniposix/core/ext/7zip/: 7zip.h
externs/miniposix/core/ext/botan/: botan.h
externs/miniposix/core/ext/botan/inc/: big_int.h  cipher.h  datablock.h  ecc.h  hash.h  ipp_cp.h
externs/miniposix/core/ext/concurrentqueue/: async_queue.h
externs/miniposix/core/ext/ipp/: ipp_canvas.h  ipp_config.h  ipp_core.h  ipp_image.h
externs/miniposix/core/ext/ipp/inc/: ipps_cpp.h
externs/miniposix/core/ext/rocksdb/: rocksdb.h  rocksdb_conf.h  rocksdb_serving.h
externs/miniposix/core/ext/sparsehash/: sparsehash.h
externs/miniposix/core/ext/zlib/: zlib.h
externs/miniposix/core/inet/: datagram_pump.h  http_client.h  inet.h  tinyhttpd.cpp  tinyhttpd.h  tinyhttpd_fileserv.cpp  tinyhttpd_fileserv.h  tinyhttpd_websocket.cpp  tinyhttpd_websocket.h
externs/miniposix/core/os/: file_dir.cpp  file_dir.h  file_zip.h  high_level.h  kernel.h  multi_thread.h  platform.h  precompiler.h  predefines.h  thread_primitive.h  user_inputs.h
externs/miniposix/core/rt/: buffer_type.h  json.cpp  json.h  mem_alloc.h  runtime_base.h  small_math.h  string_type.h  string_type_ops.h  type_traits.h  xml_xhtml.cpp  xml_xhtml.h
externs/miniupnpc/: addr_is_reserved.c  minisoap.c  minissdpc.c  miniupnpc.c  miniupnpc.h  miniupnpc_socketdef.h  miniupnpcstrings.h  miniwget.c  portlistingparse.c  upnpcommands.c  upnpreplyparse.c
libs/: .gitignore  readme.txt
src/: gossip_nettime.cpp  gossip_nettime.h  local_swarm.cpp  local_swarm.h  nat_passthrough.cpp  nat_passthrough.h  net_policy.h  net_types.h  netsvc_core.cpp  netsvc_core.h  netsvc_events.cpp  netsvc_events.h  netsvc_types.h  secure_identity.cpp  secure_identity.h  swarm_broadcast.cpp  swarm_broadcast.h  upw.cpp  upw.h
src/api/: api_errors.cpp  api_handlers.cpp  api_handlers.h  core_handler.cpp  local_api.cpp  local_api.h
src/dht/: dht.cpp  dht.h  dht_base.cpp  dht_base.h  dht_bootstrap.inc  dht_message.cpp  dht_message.h  dht_queue.h  dht_space.cpp  dht_space.h  dht_tx_connswarm.cpp  dht_tx_connswarm.h  dht_tx_joinswarm.cpp  dht_tx_joinswarm.h  dht_tx_nodes.cpp  dht_tx_nodes.h  dht_tx_swarm.cpp  dht_tx_swarm.h  dht_txns.cpp  dht_txns.h
src/gdp/: gdp.cpp  gdp.h  gdp_base.cpp  gdp_base.h  gdp_buf.h  gdp_message.cpp  gdp_message.h  gdp_peer.h  gdp_task.cpp  gdp_task.h
src/mlt/: mlt.cpp  mlt.h  mlt_common.h  mlt_file_transfer.cpp  mlt_file_transfer.h  mlt_internal_util.h  mlt_link.cpp  mlt_link.h  mlt_message.cpp  mlt_message.h  mlt_packet.cpp  mlt_packet.h  mlt_packet_cipher.h  mlt_packet_incoming.cpp  mlt_packet_incoming.h  mlt_packet_outgoing.cpp  mlt_packet_outgoing.h  mlt_tunnel.cpp  mlt_tunnel.h
src/mrc/: mrc.cpp  mrc.h  mrc_api.cpp  mrc_assemble.cpp  mrc_assemble.h  mrc_attachments.cpp  mrc_attachments.h  mrc_base.cpp  mrc_base.h  mrc_contacts.cpp  mrc_contacts.h  mrc_controls.cpp  mrc_controls.h  mrc_credential.h  mrc_dissemble.cpp  mrc_dissemble.h  mrc_media_core.cpp  mrc_media_core.h  mrc_message.cpp  mrc_message.h  mrc_swarm.cpp  mrc_swarm.h
src/stg/: storage_interface.cpp  storage_interface.h  storage_rocksdb.cpp  storage_rocksdb.h
